{
  "version": 4,
  "terraform_version": "0.12.19",
  "serial": 35,
  "lineage": "ac889acd-1ef3-932a-0ada-a7b4b685ad65",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "datastore",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:810150931758:loadbalancer/app/datastore-alb-dev/32ba040b64e93503",
            "arn_suffix": "app/datastore-alb-dev/32ba040b64e93503",
            "dns_name": "datastore-alb-dev-983429898.eu-west-1.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:810150931758:loadbalancer/app/datastore-alb-dev/32ba040b64e93503",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "datastore-alb-dev",
            "security_groups": [
              "sg-0c72d66468110ae54"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09afad75ad43fcb41"
              },
              {
                "subnet_id": "subnet-0a70d91ccb15ac24f"
              }
            ],
            "subnets": [
              "subnet-09afad75ad43fcb41",
              "subnet-0a70d91ccb15ac24f"
            ],
            "vpc_id": "vpc-0623a1f1a4b151199",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.datastore_alb",
            "aws_subnet.datastore_ecs",
            "aws_vpc.datastore"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "datastore_hasura",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:810150931758:targetgroup/datastore-alb-dev/7d00adaf12658ee3",
            "arn_suffix": "targetgroup/datastore-alb-dev/7d00adaf12658ee3",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:810150931758:targetgroup/datastore-alb-dev/7d00adaf12658ee3",
            "lambda_multi_value_headers_enabled": false,
            "name": "datastore-alb-dev",
            "port": 8080,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0623a1f1a4b151199"
          },
          "dependencies": [
            "aws_vpc.datastore"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "datastore",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0c4795b4bc5289466",
            "owner_id": "810150931758",
            "vpc_id": "vpc-0623a1f1a4b151199"
          },
          "dependencies": [
            "aws_vpc.datastore"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c4795b4bc5289466",
            "id": "r-rtb-061807c044b297f491080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-061807c044b297f49",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.datastore",
            "aws_vpc.datastore"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "datastore_alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:810150931758:security-group/sg-0c72d66468110ae54",
            "description": "Allow access on port 80 only to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c72d66468110ae54",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "datastore-alb-dev",
            "name_prefix": null,
            "owner_id": "810150931758",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0623a1f1a4b151199"
          },
          "dependencies": [
            "aws_vpc.datastore"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "datastore_ecs_hasura",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:810150931758:security-group/sg-030a2b3fb5f468f5d",
            "description": "allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-030a2b3fb5f468f5d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c72d66468110ae54"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "datastore-tasks-dev",
            "name_prefix": null,
            "owner_id": "810150931758",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0623a1f1a4b151199"
          },
          "dependencies": [
            "aws_security_group.datastore_alb",
            "aws_vpc.datastore"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "datastore_rds",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:810150931758:security-group/sg-06e75e407ff1eae29",
            "description": "allow inbound access from the hasura tasks only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06e75e407ff1eae29",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-030a2b3fb5f468f5d"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "datastore-rds-dev",
            "name_prefix": null,
            "owner_id": "810150931758",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0623a1f1a4b151199"
          },
          "dependencies": [
            "aws_security_group.datastore_alb",
            "aws_security_group.datastore_ecs_hasura",
            "aws_vpc.datastore"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "datastore_ecs",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:810150931758:subnet/subnet-09afad75ad43fcb41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "172.17.2.0/24",
            "id": "subnet-09afad75ad43fcb41",
            "map_public_ip_on_launch": true,
            "owner_id": "810150931758",
            "vpc_id": "vpc-0623a1f1a4b151199"
          },
          "dependencies": [
            "aws_vpc.datastore"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:810150931758:subnet/subnet-0a70d91ccb15ac24f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "172.17.3.0/24",
            "id": "subnet-0a70d91ccb15ac24f",
            "map_public_ip_on_launch": true,
            "owner_id": "810150931758",
            "vpc_id": "vpc-0623a1f1a4b151199"
          },
          "dependencies": [
            "aws_vpc.datastore"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "datastore_rds",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:810150931758:subnet/subnet-0446e515b4b748921",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "172.17.0.0/24",
            "id": "subnet-0446e515b4b748921",
            "map_public_ip_on_launch": false,
            "owner_id": "810150931758",
            "vpc_id": "vpc-0623a1f1a4b151199"
          },
          "dependencies": [
            "aws_vpc.datastore"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:810150931758:subnet/subnet-0a59a46e524599876",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "172.17.1.0/24",
            "id": "subnet-0a59a46e524599876",
            "map_public_ip_on_launch": false,
            "owner_id": "810150931758",
            "vpc_id": "vpc-0623a1f1a4b151199"
          },
          "dependencies": [
            "aws_vpc.datastore"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "datastore",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:810150931758:vpc/vpc-0623a1f1a4b151199",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.0.0/16",
            "default_network_acl_id": "acl-03a70f607ca3de121",
            "default_route_table_id": "rtb-061807c044b297f49",
            "default_security_group_id": "sg-096a60f986cd59ea1",
            "dhcp_options_id": "dopt-aff6b9c9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0623a1f1a4b151199",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-061807c044b297f49",
            "owner_id": "810150931758"
          }
        }
      ]
    }
  ]
}